src/objects/Asset_to_Shoot_Connection__c.object
<CustomObject>
    <description>Join table (junction object) between Creative Shoot and Creative (Parent Asset)</description>
    <fields>
        <fullName>Creative_Name__c</fullName>
        <formula>Creative__r.Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Asset</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Creative_Shoot_Name__c</fullName>
        <formula>Creative_Shoot__r.Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shoot Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Creative_Shoot__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Creative Shoot</label>
        <referenceTo>Creative_Shoot__c</referenceTo>
        <relationshipLabel>Asset-to-Shoot Connections</relationshipLabel>
        <relationshipName>Asset_to_Shoot_Connections</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Creative__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Creative</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Creative__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Parent Asset</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Creative__c</referenceTo>
        <relationshipName>Asset_to_Shoot_Connections</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Asset-to-Shoot Connection</label>
    <nameField>
        <displayFormat>AtoS-{0}</displayFormat>
        <label>Asset-to-Shoot Connections</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Asset-to-Shoot Connections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>